--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
     <style>
       body {
       }
+      #line div { 
+                  margin-left: 5px; 
+                  float: left; 
+      }
     </style>
 </head><body lang="en" onload="console.log('Hi');">
 
-    <div id="tweet" class="box">
-      <form><input autocomplete="off" value="Type here..."></input></form>
+    <div id="tweet">&nbsp
     </div>
-		<div id='box_a'>&nbsp</div>
-		<div id='box_e'>&nbsp</div>
-		<div id='box_i'>&nbsp</div>
-		<div id='box_o'>&nbsp</div>
-		<div id='box_u'>&nbsp</div>
+		<div id="line" style="position:absolute;left:0;right:0;background-color:black">
+      <div id='box_a'>&nbsp</div>
+      <div id='box_e'>&nbsp</div>
+      <div id='box_i'>&nbsp</div>
+      <div id='box_o'>&nbsp</div>
+      <div id='box_u'>&nbsp</div>
+    </div>
 </body></html>
