--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://cdn.sockjs.org/sockjs-0.3.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
-		<script src="functions.js"></script>
+		<script src="client.js"></script>
     <style>
       body {
       }
