--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
                   margin-left: 5px; 
                   float: left; 
       }
+      #square {
+            width: 25px;
+            height: 25px;
+            background-color: gray;
+        
+        }
     </style>
 </head><body lang="en" onload="console.log('Hi');">
 
-    <div id="tweet">&nbsp
-    </div>
+    <div id="counter">0</div>  
+    <div id="tweet"></div>
 		<div id="line" style="position:absolute;left:0;right:0;background-color:black">
-      <div id='box_a'>&nbsp</div>
-      <div id='box_e'>&nbsp</div>
-      <div id='box_i'>&nbsp</div>
-      <div id='box_o'>&nbsp</div>
-      <div id='box_u'>&nbsp</div>
     </div>
 </body></html>
