--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
       body {
       }
       #line div { 
-                  margin-left: 5px; 
                   float: left; 
       }
       #square {
-            width: 25px;
-            height: 25px;
+            width: 50px;
+            height: 50px;
             background-color: gray;
         
         }
@@ -24,6 +23,6 @@
 
     <div id="counter">0</div>  
     <div id="tweet"></div>
-		<div id="line" style="position:absolute;left:0;right:0;background-color:black">
+		<div id="line" style="position:absolute;left:0;right:0;">
     </div>
 </body></html>
