--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://cdn.sockjs.org/sockjs-0.3.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
+		<script src="paper.js"></script>
 		<script src="client.js"></script>
     <style>
       body {
@@ -13,14 +14,16 @@
                   float: left; 
       }
       #square {
-            width: 50px;
-            height: 50px;
-            background-color: gray;
+            width: 60px;
+            height: 60px;
+            background-color: white;
         
         }
     </style>
-</head><body lang="en" onload="console.log('Hi');">
+</head><body lang="en">
 
+    <canvas id="myCanvas" resize></canvas>
+    
     <div id="counter">0</div>  
     <div id="tweet"></div>
 		<div id="line" style="position:absolute;left:0;right:0;">
