Added multiple views + layout text in dev

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    path {
        stroke: white;
                  stroke-width: 0.25px;
-                   fill: black;
+                   fill: grey;
    }
     </style>
 </head><body lang="en">
@@ -25,11 +25,11 @@
       <form>
       Region:
       <select id="myList" onchange="getRegion()">
-      <option></option>
+      <option>TheWorld</option>
+      <option>US</option>
       <option>California</option>
-      <option>TheWorld</option>  
+      <option>SantaCruz</option>  
       </select>
-      <p>Region is: <input type="text" id="favorite" size="20"></p>
       </form>
     </div>
 
