Hover text now works

--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 
 		<script src="client.js"></script>
     <style>
-   path {
-       stroke: white;
-                 stroke-width: 0.25px;
-                   fill: grey;
-   }
-    </style>
+    path {
+      stroke: white;
+      stroke-width: 0.25px;
+      fill: grey;
+    }
+
+    .tooltipsy
+    {
+    padding: 10px;
+             max-width: 200px;
+    color: #303030;
+           background-color: #f5f5b5;
+    border: 1px solid #deca7e;
+    }
+</style>
 </head><body lang="en">
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
