Hover with style

--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
       stroke-width: 0.25px;
       fill: grey;
     }
+    .tool {
+             -webkit-border-radius: 10px;
+             -moz-border-radius: 10px;
+             border-radius: 10px;
+             border:2px solid #000000;
+             background-color:#FFFFFF;
 
-    .tooltipsy
-    {
-    padding: 10px;
-             max-width: 200px;
-    color: #303030;
-           background-color: #f5f5b5;
-    border: 1px solid #deca7e;
     }
 </style>
 </head><body lang="en">
