red_14_06_acu159403-change_graph_type_for_worker_unit_rc5.1

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <option>US</option>
       <option>California</option>
       <option>SantaCruz</option>  
+      <option>Spain</option>  
       </select>
       </form>
     </div>
